--- a/app/src/main/res/layout/edit_goal1.xml
+++ b/app/src/main/res/layout/edit_goal1.xml
@@ -5,26 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#2B2B2B"
-    android:backgroundTint="#0D000000"
+    android:backgroundTint="#FFFFFF"
     android:backgroundTintMode="screen"
     android:paddingHorizontal="10dp"
     tools:context=".EditGoal1">
-
-    <EditText
-        android:id="@+id/editTextTextPersonName3"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:backgroundTint="#0DFFFFFF"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:paddingBottom="15dp"
-        android:textColor="#D8D8D8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/targetAmountLabel2" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/editGoal1_toolbar"
@@ -40,97 +24,264 @@
         app:title="Edit Goal"
         app:titleTextColor="@color/white"></androidx.appcompat.widget.Toolbar>
 
-    <TextView
-        android:id="@+id/targetAmountLabel2"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linearLayout1_newGoal1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="Target Amount"
-        android:textColor="#8F8F8F"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
-
-
-    <EditText
-        android:id="@+id/editTextTextPersonName"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:backgroundTint="#0DFFFFFF"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:paddingBottom="15dp"
-        android:textColor="#D8D8D8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameLabel" />
-
-    <EditText
-        android:id="@+id/editTextTextPersonName2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:backgroundTint="#0DFFFFFF"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:paddingBottom="15dp"
-        android:textColor="#D8D8D8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/targetAmountLabel" />
-
-    <TextView
-        android:id="@+id/nameLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:shadowColor="#FFFFFF"
-        android:text="Name"
-        android:textColor="#8F8F8F"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
-        app:layout_constraintTop_toBottomOf="@+id/editGoal1_toolbar" />
-
-    <TextView
-        android:id="@+id/targetAmountLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="Target Amount"
-        android:textColor="#8F8F8F"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="216dp"
-        android:layout_height="121dp"
-        android:layout_marginTop="24dp"
-        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3">
-
-        <Spinner
-            android:id="@+id/spinner_color"
-            android:layout_width="181dp"
-            android:layout_height="65dp"
-            android:backgroundTint="#FFFFFF"
-            android:foregroundTint="#000000"
-
-            android:popupBackground="@color/black"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/textView2" />
+        android:layout_marginTop="8dp"
+        android:background="@drawable/text_input"
+        android:orientation="vertical"
+        android:padding="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/editGoal1_toolbar"
+        tools:layout_editor_absoluteX="10dp">
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/Name_editGoal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Goal color"
-            android:textColor="#8F8F8F"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toTopOf="@+id/spinner_color"
-            app:layout_constraintStart_toStartOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_gravity="center_vertical"
+            android:paddingStart="8dp"
+            android:text="Name"
+            android:textColor="@color/black"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/editTextName_editGoal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:ems="10"
+            android:hint="Add Name"
+            android:inputType="textPersonName"
+            android:paddingStart="8dp"
+            android:textColorHint="#7A7A7A"
+            android:textSize="16sp"
+            tools:text="@tools:sample/full_names" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout2_newGoal1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/linearLayout1_newGoal1"
+        tools:layout_editor_absoluteX="10dp">
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/text_input">
+
+            <TextView
+                android:id="@+id/Color_newGoal1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:paddingStart="8dp"
+                android:text="Color"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
+
+            <Spinner
+                android:id="@+id/spinner_color"
+                android:layout_width="160dp"
+                android:layout_height="15dp"
+                android:layout_below="@id/Color_newGoal1"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="4dp"
+                android:layout_weight="1"
+                android:spinnerMode="dialog"
+                android:textAlignment="center" />
+
+        </RelativeLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/relativeLayout3"
+            android:layout_width="110dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/text_input"
+            android:visibility="visible">
+
+            <TextView
+                android:id="@+id/Icon_newGoal1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:paddingStart="8dp"
+                android:text="Icon"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageButton
+                android:id="@+id/spinner_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:textAlignment="center"
+                android:src="@drawable/ic_car"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/Icon_newGoal1" />
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:contentDescription="TODO"
+                android:src="@drawable/ic_dropdown"
+                app:layout_constraintBottom_toBottomOf="@+id/spinner_icon"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/spinner_icon"
+                app:layout_constraintTop_toBottomOf="@id/Icon_newGoal1" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout3_newGoal1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@drawable/text_input"
+        android:layout_margin="10dp"
+        android:padding="10dp"
+        app:layout_constraintTop_toBottomOf="@id/linearLayout2_newGoal1">
+
+        <TextView
+            android:id="@+id/targetAmount_newGoal1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:paddingStart="8dp"
+            android:text="Target Amount"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            />
+
+        <EditText
+            android:id="@+id/edittargetAmount_newGoal1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:ems="10"
+            android:hint="200,000.00"
+            android:textSize="16sp"
+            android:textColorHint="#7A7A7A"
+            android:inputType="number"
+            android:paddingStart="8dp"
+            android:drawableEnd="@drawable/ic_dropdown"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout4_newGoal1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@drawable/text_input"
+        android:layout_margin="10dp"
+        android:padding="10dp"
+        app:layout_constraintTop_toBottomOf="@id/linearLayout3_newGoal1">
+
+        <TextView
+            android:id="@+id/savedAlready_newGoal1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:paddingStart="8dp"
+            android:text="Saved Already"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            />
+
+        <TextView
+            android:id="@+id/textSavedAlready_newGoal1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:ems="10"
+            android:hint="150,000.00"
+            android:textSize="16sp"
+            android:textColorHint="#7A7A7A"
+            android:inputType="number"
+            android:paddingStart="8dp"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout5_newGoal1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@drawable/text_input"
+        android:orientation="vertical"
+        android:padding="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout4_newGoal1">
+
+        <TextView
+            android:id="@+id/textDesiredDate_newGGoal1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:paddingStart="8dp"
+            android:text="Desired Date"
+            android:textColor="@color/black"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/editDate_newGGoal1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:ems="10"
+            android:hint="MM/DD/YYYY"
+            android:inputType="date"
+            android:paddingStart="8dp"
+            android:textColorHint="#7A7A7A"
+            android:textSize="16sp"
+            tools:text="@tools:sample/date/mmddyy" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout6_newGoal1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:background="@drawable/text_input"
+        android:orientation="vertical"
+        android:padding="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout5_newGoal1">
+
+        <TextView
+            android:id="@+id/editNotes_newGoal1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:paddingStart="8dp"
+            android:text="Notes"
+            android:textColor="@color/black"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/editTextNotes_newGoal1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:ems="10"
+            android:hint="Add Notes"
+            android:inputType="textImeMultiLine"
+            android:paddingStart="8dp"
+            android:textColorHint="#7A7A7A"
+            android:textSize="16sp" />
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
